add modifica nome e descrizione in info playlist
