# SNM/api.js
@@ -388,6 +388,40 @@ app.put('/playlist/tag/:id', auth, async function (req, res) {
     res.json(playlists)
 })
 
+app.put('/playlist/name/:id', auth, async function (req, res) {
+    // Ricerca nel database
+    var id = req.params.id
+    var name = req.body
+    if(name.name == undefined){
+        res.statusMessage = "Missing Name"
+        res.status(400)
+        res.send()
+        return
+    }
+    if(name.name == ""){
+        res.statusMessage = "Empty Name"
+        res.status(400)
+        res.send()
+        return
+    }
+    var pwmClient = await new mongoClient(uri).connect()
+    var playlists = await pwmClient.db("SNM")
+        .collection('Playlists')
+        .updateOne({"_id" : new ObjectId(id)}, {$set : name})
+    res.json(playlists)
+})
+
+app.put('/playlist/description/:id', auth, async function (req, res) {
+    // Ricerca nel database
+    var id = req.params.id
+    var description = req.body
+    var pwmClient = await new mongoClient(uri).connect()
+    var playlists = await pwmClient.db("SNM")
+        .collection('Playlists')
+        .updateOne({"_id" : new ObjectId(id)}, {$set : description})
+    res.json(playlists)
+})
+
 app.get('/playlists/info/:id', auth, async function (req, res) {
     // Ricerca nel database
     var id = req.params.id
